--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -51,8 +51,8 @@ jobs:
             ~/.konan
           key: ${{ runner.os }}-gradle-${{ hashFiles('/*.gradle*', '/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-gradle-
-      - name: Ls
-        run: ls
+      - name: Sbt
+        run: sbt
       - name: Run FormaLM analysis
         run: java -jar /home/gradle/formalm/formalm-0.0.1-SNAPSHOT.jar $GITHUB_WORKSPACE /home/gradle/test report.sarif
       - name: Upload SARIF file
