--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -51,14 +51,15 @@ jobs:
             ~/.konan
           key: ${{ runner.os }}-gradle-${{ hashFiles('/*.gradle*', '/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-gradle-
+      - name: Setup OPENAI token
+        run: echo "OPENAI_TOKEN=${{ secrets.OPENAI_TOKEN }} " >> $GITHUB_ENV
       - name: Run FormaLM analysis
         run: java -jar /home/gradle/formalm/formalm-0.0.1-SNAPSHOT.jar $GITHUB_WORKSPACE /home/gradle/test /home/gradle/report.sarif
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
         with:
-        # Path to SARIF file relative to the root of the repository
+          # Path to SARIF file relative to the root of the repository
           sarif_file: home/gradle/report.sarif
-        # Optional category for the results
-        # Used to differentiate multiple results for one commit
-        #category: my-analysis-tool
-
+          # Optional category for the results
+          # Used to differentiate multiple results for one commit
+          #category: my-analysis-tool
