added sarif for testing purposes

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -53,15 +53,15 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle-
       - name: Setup OPENAI token
         run: echo "OPENAI_TOKEN=${{ secrets.OPENAI_TOKEN }} " >> $GITHUB_ENV
-      - name: Run FormaLM analysis
-        run: java -jar /home/gradle/formalm/formalm-0.0.1-SNAPSHOT.jar $GITHUB_WORKSPACE /home/gradle/test /home/gradle/report.sarif
+#      - name: Run FormaLM analysis
+#        run: java -jar /home/gradle/formalm/formalm-0.0.1-SNAPSHOT.jar $GITHUB_WORKSPACE /home/gradle/test /home/gradle/report.sarif
       - name: Show SARIF file
-        run: cat /home/gradle/report.sarif
+        run: cat report.sarif #/home/gradle/report.sarif
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
         with:
           # Path to SARIF file relative to the root of the repository
-          sarif_file: /home/gradle/report.sarif
+          sarif_file: report.sarif
           # Optional category for the results
           # Used to differentiate multiple results for one commit
           #category: my-analysis-tool
