--- a/.github/workflows/local_sarif.yml
+++ b/.github/workflows/local_sarif.yml
@@ -29,6 +29,15 @@ jobs:
             shell: bash
     steps:
       - uses: actions/checkout@v2
+      - name: Restore native cache
+        id: cache-native
+        uses: actions/cache@v3
+        with:
+          path: |
+            scripts/build
+          key: ${{ runner.os }}-native-${{ hashFiles('./scripts/*') }}
+      - name: Show SARIF
+        run: cat report.sarif
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
         with:
