--- a/.github/workflows/local_sarif.yml
+++ b/.github/workflows/local_sarif.yml
@@ -4,6 +4,9 @@ defaults:
     shell: bash
 
 on:
+  pull_request:
+    branches:
+      - 'testing-sarif'
   workflow_dispatch:
 
 env:
@@ -29,6 +32,27 @@ jobs:
             shell: bash
     steps:
       - uses: actions/checkout@v2
+      - name: Restore native cache
+        id: cache-native
+        uses: actions/cache@v3
+        with:
+          path: |
+            scripts/build
+          key: ${{ runner.os }}-native-${{ hashFiles('./scripts/*') }}
+      - name: Restore Gradle cache
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+            ~/.gradle/yarn
+            ~/.gradle/nodejs
+            ~/.konan
+          key: ${{ runner.os }}-gradle-${{ hashFiles('/*.gradle*', '/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-gradle-
+      - name: Show SARIF
+        run: cat report.sarif
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
         with:
