--- a/formalm.conf
+++ b/formalm.conf
@@ -1,6 +1,9 @@
 {
-  "scalaVersion" : "2.13",
-  "sbtVersion" : "1.8.2",
+  "languageConfig": {
+      "language": "scala",
+      "version": "2.13",
+      "sbtVersion" : "1.8.2"
+    },
   "modules" : [],
   "commonDependencies" : [],
   "commonPlugins" : [
