--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -56,11 +56,12 @@ jobs:
       - name: Setup OPENAI token
         run: echo "OPENAI_TOKEN=${{ secrets.OPENAI_TOKEN }} " >> $GITHUB_ENV
       - name: Run FormaLM analysis
-        run: java -jar /home/gradle/formalm/formalm-0.0.1-SNAPSHOT.jar 
-          repo-path="$GITHUB_WORKSPACE" \ 
-          output-path="/home/gradle" \
-          services=scalafix,scoverage \
-          scoverage-include-var=false \
+        run: >
+          java -jar /home/gradle/formalm/formalm-0.0.1-SNAPSHOT.jar 
+          repo-path=$GITHUB_WORKSPACE  
+          output-path="/home/gradle" 
+          services=scalafix,scoverage 
+          scoverage-include-var=false
           scoverage-restrict-results=5
       - name: Show SARIF file
         run: cat /home/gradle/report.sarif
